--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h1{ font-size: +50;
                 border-radius: 2.5rem;
             }
 .bg1{
-  		background: -webkit-linear-gradient(left,#00c6ff,#2BE555, #00c6ff);
+  		background: -webkit-linear-gradient(left,#FFFFFF,	#00FFFF,	#FFFFFF);
 }
 .btnSubmit
             {
